# Asgard-Linux-Template

./: .clang-format  .gitignore  .gitmodules  README.md  asgard  asgard_install.sh  meson.build
source/: main.cpp
